--- a/.env
+++ b/.env
@@ -26,7 +26,7 @@ APP_SECRET=aaece2bc4b424f506ec3e2f58fd56aab
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://test:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
-DATABASE_URL="mysql://root@127.0.0.1:3306/users"
+DATABASE_URL="mysql://root@127.0.0.1:3306/user"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
