--- a/package.json
+++ b/package.json
@@ -28,5 +28,10 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "engines": {
+        "node": "v18.12.1",
+        "npm": "8.19.2",
+        "yarn": "3.4.1"
     }
 }
