--- a/public/.htaccess
+++ b/public/.htaccess
@@ -77,4 +77,6 @@ DirectoryIndex index.php
         Header set X-Permitted-Cross-Domain-Policies "none"
         Header set Referrer-Policy "no-referrer"
         Header set X-Content-Type-Options: nosniff
+        Header set Content-Security-Policy "default-src 'self';"
+        Header set Permissions-Policy "geolocation=('self')"
 </ifModule>
